Sat Mar  4 21:59:22 EST 2006

	Highlight python docstrings the same as regular strings.

Wed Mar  1 10:19:49 EST 2006

	Match how Thomas Dickey implemented the xterm-paste patch.
	Xterm has a bug: if selection is not owned by xterm, the string
	is messed up.

Tue Feb 28 18:50:32 EST 2006

	Fix bug where 'complete' command core dumps.
	Fix bug where '.' alone with c highlighting enabled core dumps.
	Don't run editor if joerc file is bad.
	Improve lock messages.

Mon Feb 27 01:34:37 EST 2006

	Fix perl highlighter bug.  $q not handled properly.
	Show properly escaped previous search string

Thu Feb 23 13:41:20 EST 2006

	Fix bugs with quoted entry.  Now we ignore terminal's encoding on
quoted entry.


Sun Feb 19 22:34:20 EST 2006

	Fix some bugs on itanium: call to joe_malloc was return a (int) and
then got converted to a pointer.  Likewise with things in termcap.c which
needed term.h and curses.h.

	Improved speed of highlighting.

Tue Dec 27 16:56:44 EST 2005

	Allow entry of replacement blank replacement strings when search
	prompting is enabled (basically eliminate automatic replace-string
	prompting).

	"bufed" now works like other file name commands (it prompts for a
	buffer name, and allows completion).

	H-scroll jumps left ~ 10 cols (this needs more work: it should be an
	option).

Tue May 17 18:20:02 EDT 2005

	Release JOE 3.3

Tue May  3 13:33:21 EDT 2005

	Add .cc file type

Sun Apr 24 00:16:25 EDT 2005

	Fix compiler warnings from gcc-4.0.0

Fri Apr 22 00:47:55 EDT 2005

	Fix ctrl-select bug when near buffer edges

	Don't use nl_langinfo(CODESET) in Cygwin.

	Add Ada syntax file

Thu Apr 21 15:46:09 EDT 2005

	Add some grep find support:
		ESC g   execute grep
		ESC SP  jump to "file line:"

	Add xterm-patch to make dist.

Sun Apr 17 12:05:32 EDT 2005

	Scripts for Cygwin.
	Version numbering scheme for Cygwin.

Fri Apr  8 10:27:24 EDT 2005

	Add awk syntax file
	Use c syntax file for yacc
	Use c syntax file for lex
	Add cobol syntax file