@@ -2,6 +2,8 @@ Sat Mar  4 21:59:22 EST 2006
 
 	Highlight python docstrings the same as regular strings.
 
+	Fix bug with -assume_256color: missing ; in escape sequence
+
 Wed Mar  1 10:19:49 EST 2006
 
 	Match how Thomas Dickey implemented the xterm-paste patch.
